--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@ body {
     line-height: 1.6;
     background: #f9f9f9;
 }
-
+.flower {
+    width:50%;
+}
 header {
     background: #222;
     color: #fff;
